--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <script>
       function green() {
           UART.write('Bangle.setLCDPower(1);\n');
-          UART.write('g.clear();\n');
-          UART.write('g.setColor(0,1,0);\n');
-          UART.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
-          UART.write('nextLightGreen = false;\n');
+          //UART.write('g.clear();\n');
+          //UART.write('g.setColor(0,1,0);\n');
+          //UART.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
+          //UART.write('nextLightGreen = false;\n');
   
   }
   </script> 
