--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </script> 
   <button onclick="UART.write('LED1.set();\n');">LED On!</button>
   <button onclick="UART.write('LED1.reset();\n');">LED Off!</button>
-  <button onclick="green()">Screen green</button>
+  <button onclick="UART.write('Bangle.setLCDPower(1);\n');">Screen green</button>
  </body>
 </html>
