--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
  </head>
  <body>
   <script src="https://www.espruino.com/js/uart.js"></script>
-  <script>
+  <script type="javascript">
       function green() {
           UART.write('Bangle.setLCDPower(1);\n');
-          //UART.write('g.clear();\n');
-          //UART.write('g.setColor(0,1,0);\n');
-          //UART.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
-          //UART.write('nextLightGreen = false;\n');
+          UART.write('g.clear();\n');
+          UART.write('g.setColor(0,1,0);\n');
+          UART.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
+          UART.write('nextLightGreen = false;\n');
   
   }
   </script> 
