--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
  <head>
  </head>
  <body>
-  <script src="https://www.puck-js.com/puck.js"></script>
+  <script src="https://www.Puck-js.com/Puck.js"></script>
   <script type="text/javascript">
       function green() {
-          PUCK.write('Bangle.setLCDPower(1);\n');
-          PUCK.write('g.clear();\n');
-          PUCK.write('g.setColor(0,1,0);\n');
-          PUCK.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
-          PUCK.write('nextLightGreen = false;\n');
+          Puck.write('Bangle.setLCDPower(1);\n');
+          Puck.write('g.clear();\n');
+          Puck.write('g.setColor(0,1,0);\n');
+          Puck.write('g.fillCircle(g.getWidth()/2, g.getHeight()/2+10, 105);\n');
+          Puck.write('nextLightGreen = false;\n');
   
   }
   </script> 
-  <button onclick="PUCK.write('LED1.set();\n');">LED On!</button>
-  <button onclick="PUCK.write('LED1.reset();\n');">LED Off!</button>
+  <button onclick="Puck.write('LED1.set();\n');">LED On!</button>
+  <button onclick="Puck.write('LED1.reset();\n');">LED Off!</button>
   <button onclick="green()">Screen green</button>
  </body>
 </html>
