--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   }
   </script> 
   <button onclick="Puck.write('LED1.set();\n');">LED On!</button>
-  <button onclick="Puck.write('LED1.reset();\n');">LED Off!</button>
+  <button onclick="Puck1.write('LED1.reset();\n');">LED Off!</button>
   <button onclick="green()">Screen green</button>
  </body>
 </html>
