--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
  </head>
  <body>
-  <script src="https://www.Puck-js.com/Puck.js"></script>
+  <script src="https://www.puck-js.com/puck.js"></script>
   <script type="text/javascript">
       function green() {
           Puck.write('Bangle.setLCDPower(1);\n');
@@ -14,7 +14,7 @@
   }
   </script> 
   <button onclick="Puck.write('LED1.set();\n');">LED On!</button>
-  <button onclick="Puck1.write('LED1.reset();\n');">LED Off!</button>
+  <button onclick="Puck.write('LED1.reset();\n');">LED Off!</button>
   <button onclick="green()">Screen green</button>
  </body>
 </html>
